<resources>
    <string name="app_name">FaceUp</string>
    <string name="title_menu_1">Detect your acne type</string>
    <string name="title_menu_2">We will give you solution</string>
    <string name="title_menu_3">Recomending the best skincare for your problem</string>
    <string name="title_menu_4">Live Consultation with expert</string>
    <string name="desc_menu_1">We can Help you to solve your acne problem. Start detection so we can know your acne problem </string>
    <string name="desc_menu_2">We provide solution for your acne type, we will make sure you handling action is save for your acne type</string>
    <string name="desc_menu_3">With our recomendation skincare product, we make sure its save for your acne type</string>
    <string name="desc_menu_4">You can Consultation live with expert of your acne problem </string>
    <string name="btn_begin">lets begin</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="login_desc">Lets Solve your acne problem and keep you face up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="email_example">youremail@ex.dom</string>
    <string name="pass_hint">********</string>
    <string name="dont_have_account">Dont Have Account?</string>
    <string name="register">Register</string>
    <string name="homepage">Home</string>
    <string name="camera">Camera</string>
    <string name="settings">Settings</string>
</resources>